--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
 
-h1 {
-  font-size: 20vw;
-}
-
-h3 {
-  font-size: 10vw;
-}
-
 h1,h3 {
-  text-align: center;
+  text-align: left;
   margin: 0;
+  font-size: 5vw;
+  
   font-family: 'Rubik', sans-serif;
 }
 
